--- a/src/components/ModalLogin/modalLogin.css
+++ b/src/components/ModalLogin/modalLogin.css
@@ -30,7 +30,7 @@
 
 .login_form {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
 	margin: auto;
